--- a/app/views/posts/confirm.html.erb
+++ b/app/views/posts/confirm.html.erb
@@ -1,25 +1,45 @@
-<h2> <strong>Confirmation Page</strong> </h2>
+<div class="d-flex flex-column align-items-center mt-3">
+  <div class="col-xl-7 col-lg-8 col-md-10 col-sm-11 post-card">
+    <div class="card">
+      <div class="card-header">
+          Confirmation Page
+      </div>
+      <div class="card-body">
+        <%= form_with(model: @post, local: true ,url: choose_new_or_edit , :html => {:multipart => true, :class => "dropzone upload-images p-0 border-0"}  )  do |f| %>
+        <div class="form-group row mt-2">
+          <div class="col-auto pr-0">
+            <%= image_tag avatar_url(current_user) %>
+          </div>
+          <div class="col pl-0">
 
-<%= form_with(model: @post, local: true) do |form| %>
-<div class="text-center">
-<div class="field">
-<%= form.label :Your_post %>
-<h5><%= form.hidden_field :content , class: "field"%></h5>
+            <h5><%= f.hidden_field :content , class: "field"%></h5>
+            <p><%= @post.content %></p>
+            <%= f.hidden_field :user_id %>
+            <%= f.hidden_field :id %>
+          </div>
+        </div>
+
+
+<%# <%= form.hidden_field :image %> %>
+
+<%# <%= image_tag(@post.image.url) if @post.image && @post.image.url %>
+<%# <%= form.hidden_field :image_cache %> %> %>
+
+</div>
 </div>
 
-<%= form.hidden_field :image %>
-<p>Post:<%= @post.content %></p>
-<%= image_tag(@post.image.url) if @post.image && @post.image.url %>
-<%= form.hidden_field :image_cache %>
-<%= form.hidden_field :user_id %>
-<%= form.hidden_field :id %>
-</div>
-
-<div class="text-center">
-<br>
-<br>
-<%= form.submit "submit" , class: "btn btn-primary"%>
-<%= form.submit "back", name:'back' , class: "btn" %>
-</div>
-
+<%= f.submit "Post", class: "btn btn-primary" %>
+<%= f.submit "back", name:'back' , class: "btn" %>
 <% end %>
+</div>
+
+</div>
+
+<!-- <div class="text-center">
+<br>
+<br>
+<%# <%= form.submit "submit" , class: "btn btn-primary"%> %>
+
+</div> -->
+
+<%# <% end %> %>
