--- a/app/views/posts/_photos.html.erb
+++ b/app/views/posts/_photos.html.erb
@@ -1,18 +1,11 @@
 <%= link_to post_path(post) do %>
-  <% if post.photos.size == 1 %>
-    <%= image_tag post.photos.first.image.url(:standard), class: "card-img-top" %>
-  <% else %>
-    <div class="carousel slide" data-ride="carousel" id="carousel-post-<%= @post.id %>">
+    <div class="carousel slide" data-ride="carousel" id="carousel-post-<%= @post.id %>
       <div class="carousel-inner">
-        <% post.photos.each do |photo| %>
-          <% if photo == post.photos.first %>
             <div class="carousel-item active">
-          <% else %>
+                  <%= image_tag(post.image.url) if post.image && post.image.url  %>
             <div class="carousel-item">
           <% end %>
-              <%= image_tag photo.image.url(:standard), class: "card-img-top" %>
             </div>
-        <% end %>
       </div>
       <a class="carousel-control-prev" href="#carousel-post-<%= @post.id %>" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -23,5 +16,3 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
-  <% end %>
-<% end %>
