--- a/app/views/posts/confirm.html.erb
+++ b/app/views/posts/confirm.html.erb
@@ -2,10 +2,10 @@
   <div class="col-xl-7 col-lg-8 col-md-10 col-sm-11 post-card">
     <div class="card">
       <div class="card-header">
-          Confirmation Page
+        Confirmation Page
       </div>
       <div class="card-body">
-        <%= form_with(model: @post, local: true ,url: choose_new_or_edit , :html => {:multipart => true, :class => "dropzone upload-images p-0 border-0"}  )  do |f| %>
+        <%= form_with(model: @post, local: true ,url: choose_new_or_edit)  do |f| %>
         <div class="form-group row mt-2">
           <div class="col-auto pr-0">
             <%= image_tag avatar_url(current_user) %>
@@ -19,27 +19,16 @@
           </div>
         </div>
 
+        <%= image_tag(@post.image.url) if @post.image && @post.image.url%>
+        <%= f.hidden_field :image %>
+        <%= f.hidden_field :image_cache%>
 
-<%# <%= form.hidden_field :image %> %>
+      </div>
+    </div>
 
-<%# <%= image_tag(@post.image.url) if @post.image && @post.image.url %>
-<%# <%= form.hidden_field :image_cache %> %> %>
-
-</div>
-</div>
-
-<%= f.submit "Post", class: "btn btn-primary" %>
-<%= f.submit "back", name:'back' , class: "btn" %>
-<% end %>
-</div>
+    <%= f.submit "Post", class: "btn btn-primary" %>
+    <%= f.submit "back", name:'back' , class: "btn" %>
+    <% end %>
+  </div>
 
 </div>
-
-<!-- <div class="text-center">
-<br>
-<br>
-<%# <%= form.submit "submit" , class: "btn btn-primary"%> %>
-
-</div> -->
-
-<%# <% end %> %>
