--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -5,7 +5,7 @@
         Create Post
       </div>
       <div class="card-body">
-        <%= form_with(model: @post, local: true ,url: choose_new_or_edit , :html => {:multipart => true, :class => "dropzone upload-images p-0 border-0"}  )  do |f| %>
+        <%= form_with(model: @post, local: true ,url: choose_new_or_edit   )  do |f| %>
         <div class="form-group row mt-2">
           <div class="col-auto pr-0">
             <%= image_tag avatar_url(current_user) %>
@@ -17,23 +17,23 @@
           </div>
         </div>
         <div class="fallback">
-          <%= image_tag(@post.image.url) if @post.image && @post.image.url %>
-          <%# <%= image_tag(@post.image.url)%> %>
-          <%# <%= file_field_tag "images[]", type: :file, multiple: true%> %>
-          <%= f.file_field :image %>
-          <%# <%= file_field_tag "images[]", type: :file, multiple: true %>
-          <%# <%= f.file_field :image , class: "post-author-icon" %> %> %>
-          <%= f.hidden_field :image_cache %>
         </div>
-        <!-- <div class="dz-message m-0"></div> -->
-        <!-- <div class="dropzone-previews mb-3"> -->
-          <!-- <div class="upload-photos-icon"> -->
-            <!-- <i class="fa fa-plus fa-2x" aria-hidden="true" style="color:#dddfe2"></i> -->
-          </div>
-        </div>
-        <%= f.submit "Post", class: "btn btn-primary" %>
-        <% end %>
+        <div class="dz-message m-0"></div>
+        <div class="dropzone-previews mb-3">
+        <div class="upload-photos-icon">
+
+        <i class="fa fa-plus fa-2x" aria-hidden="true" style="color:#dddfe2"><%= f.label :image %>
+        <%= image_tag(@post.image.url) if @post.image && @post.image.url %>
+        <%= f.file_field :image %>
+        <%= f.hidden_field :image_cache %>
+        <%= f.hidden_field :user_id ,value: current_user.id  %></i>
       </div>
     </div>
+  </div>
+  <%= f.submit "Post", class: "btn btn-primary" %>
+  <% end %>
+</div>
 
-    <%= render 'history' %>
+</div>
+
+<%= render 'history' %>
