--- a/app/views/users/_post.html.erb
+++ b/app/views/users/_post.html.erb
@@ -9,7 +9,7 @@
           <%= post.comments.size %>
         </span>
       </div>
-      <%# <%= image_tag post.photos.first.image.url(:standard), class: "card-img-top image-preview" %> %>
+      <%= image_tag(post.image.url) if post.image && post.image.url  %>
     <% end %>
   </div>
 <% end %>
