--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -17,13 +17,17 @@
 
             <div class="form-group">
               <%= f.text_field :name, autofocus: true, placeholder: "Your name", class: "form-control" %>
-              
+
             </div>
 
             <div class="form-group">
               <%= f.email_field :email, autofocus: true, placeholder: "Email", class: "form-control" %>
             </div>
 
+
+          <div class="form-group">
+            <%= form.file_field :icon, placeholder: 'icon', class: "log-in-tag" %>
+          </div>
             <div class="form-group">
               <%= f.password_field :password, autocomplete: "off", placeholder: "Password", class: "form-control" %>
             </div>
