--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -22,7 +22,7 @@
         <div class="dropzone-previews mb-3">
         <div class="upload-photos-icon">
 
-        <i class="fa fa-plus fa-2x" aria-hidden="true" style="color:#dddfe2"><%= f.label :image %>
+        <i class="fa fa-plus fa-2x" aria-hidden="true" style="color:#dddfe2">
         <%= image_tag(@post.image.url) if @post.image && @post.image.url %>
         <%= f.file_field :image %>
         <%= f.hidden_field :image_cache %>
