Hello , set up fav pages , public pages and more

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,7 +17,7 @@
           <a class="nav-link core-sprite explore-icon hide-text" href="#">Explore</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link core-sprite notification-icon hide-text" href="http://localhost:3000/users/:id/favourite"> FAVORITES </a>
+          <a class="nav-link core-sprite notification-icon hide-text" href="#"> FAVORITES </a>
         </li>
         <li class="nav-item">
           <% if logged_in? %>
