Set up some minor stuff

--- a/app/views/posts/_posts_list.html.erb
+++ b/app/views/posts/_posts_list.html.erb
@@ -50,6 +50,24 @@
         <span><strong><%= post.user.name %></strong></span>
         <span><%= post.content %></span>
       </div>
+    <br>
+    <br>
+
+<% unless @post.user_id == current_user.id %>
+  <% if @favorite.present? %>
+    <button type="button" class="btn btn-danger"><%= link_to 'Unfavorite', favorite_path(id: @favorite.id), method: :delete %>
+  <% else %>
+    <button type="button" class="btn "><%= link_to 'Favorite', favorites_path(post_id: @post.id), method: :post %>
+  <% end %>
+<% end %>
+
+<% if @post.user_id == current_user.id %>
+  <button type="button" class="btn btn-default"><%= link_to 'Edit', edit_post_path(@post) %>
+  <button type="button" class="btn btn-danger"><%= link_to 'Delete', @post, method: :delete, data: { confirm: 'Are you sure?' } %>
+<% end %>
+<br>
+
+<button type="button" class="btn btn-default"><%= link_to 'Back', posts_path %>
       <!-- load comments -->
       <div id="comment-post-<%= post.id.to_s %>">
         <%= render 'comment_list', {post: post} %>
@@ -60,8 +78,12 @@
       <div class="row actions" id="comment-form-post-<%= post.id.to_s %>">
         <%= render 'comment_form', {post: post} %>
       </div>
+
+
+
     </div>
   </div>
 <% end %>
+
 </div>
 </div>
