--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -8,7 +8,7 @@
         <%= form_with(model: @post, local: true ,url: choose_new_or_edit   )  do |f| %>
         <div class="form-group row mt-2">
           <div class="col-auto pr-0">
-            <%= image_tag avatar_url(current_user) %>
+              <%= image_tag @current_user.icon.url(), width: '38', height: '38', class: "round-img" %>
           </div>
           <div class="col pl-0">
             <%= f.text_field :content, class: "form-control border-0",
