--- a/app/views/users/favourite.html.erb
+++ b/app/views/users/favourite.html.erb
@@ -1,7 +1,7 @@
 <div class="row edit-profile-wrapper">
   <div class="col-sm-3 left-col">
     <div class="list-group">
-      <a href="#" class="list-group-item list-group-item-action">YOUR FAVORITES</a>
+      <a class="list-group-item list-group-item-action">YOUR FAVORITES</a>
       <%= link_to "Log out", session_path(current_user.id), method: :delete,
       class: "list-group-item list-group-item-action" %>
     </div>
@@ -16,18 +16,20 @@
       </div>
     </div>
 
-    <table>
-      <tbody>
-        <% @favorites.each do |post| %>
-        <tr>
-          <td><%= post.user.name %></td>
-          <td><%= image_tag(post.image.url) %></td>
-          <td><%= post.posts %></td>
-          <td><%= link_to 'Show', @post %></td>
-        </tr>
-        <% end %>
-      </tbody>
-    </table>
 
+    <% @favorites.each do |post| %>
+
+    <%= link_to user_path(post.user), class: "normal-color no-text-decoration",
+      title: post.user.name do %>
+      <strong><%= post.user.name %></strong>
+    <% end %>
+
+    <% if post.is_belongs_to? current_user %>
+      <%= link_to post_path(post), method: :delete, class: "ml-auto delete-post-icon mx-0 my-auto" do %>
+        <i class="far fa-trash-alt" aria-hidden="true"></i>
+      <% end %>
+    <% end %>
+    <% end %>
   </div>
+
 </div>
