--- a/app/views/post_mailer/post_mail.html.erb
+++ b/app/views/post_mailer/post_mail.html.erb
@@ -2,4 +2,4 @@
 <h4> New post details ...</h4>
 <p>name: <%= @post.user.name %></p>
 <p>content: <%= @post.posts %></p>
-<p>image: <%= image_tag(@post.image.url) %></p>
+<p>image: <%= image_tag(@post.image.url) %></p>>
