--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,12 +21,13 @@
               </button>
             </div>
             <div class="list-group text-center">
-              <a href="#" class="list-group-item list-group-item-action">Change Password</a>
               <%= link_to "Log out", session_path(current_user.id), method: :delete,
                 class: "list-group-item list-group-item-action" %>
-              <a href="#" class="list-group-item list-group-item-action" data-dismiss="modal">Cancel</a>
-            </div>
+             <%= link_to 'Delete Account', @user, method: :delete, class: "list-group-item list-group-item-action" ,data: { confirm: 'Are you sure?' } %>
+             <a href="#" class="list-group-item list-group-item-action" data-dismiss="modal">Cancel</a>
+           </div>
           </div>
+
         </div>
       </div>
     </div>
