--- a/app/views/posts/_posts_list.html.erb
+++ b/app/views/posts/_posts_list.html.erb
@@ -27,6 +27,8 @@
       <% if post.is_belongs_to? current_user %>
         <%= link_to post_path(post), method: :delete, class: "ml-auto delete-post-icon mx-0 my-auto" do %>
           <i class="far fa-trash-alt" aria-hidden="true"></i>
+
+        <button type="button" class="btn btn-default"><%= link_to 'Edit', edit_post_path(@post) %>
         <% end %>
       <% end %>
     </div>
