--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,8 @@
       <%= yield %>
     </div>
 
+    <%= render 'posts/index'  %>
+
     <%= render 'shared/footer' %>
 
     <% if flash.any? %>
