--- a/app/views/posts/confirm.html.erb
+++ b/app/views/posts/confirm.html.erb
@@ -8,7 +8,7 @@
         <%= form_with(model: @post, local: true ,url: choose_new_or_edit)  do |f| %>
         <div class="form-group row mt-2">
           <div class="col-auto pr-0">
-            <%= image_tag avatar_url(current_user) %>
+            <%= image_tag @current_user.icon.url(), width: '38', height: '38', class: "round-img" %>
           </div>
           <div class="col pl-0">
 
@@ -16,6 +16,7 @@
             <p><%= @post.content %></p>
             <%= f.hidden_field :user_id %>
             <%= f.hidden_field :id %>
+
           </div>
         </div>
 
@@ -23,12 +24,22 @@
         <%= f.hidden_field :image %>
         <%= f.hidden_field :image_cache%>
 
+
+
       </div>
     </div>
+<br>
 
-    <%= f.submit "Post", class: "btn btn-primary" %>
-    <%= f.submit "back", name:'back' , class: "btn" %>
-    <% end %>
   </div>
+
+  <%= f.submit "Post" ,class: "btn btn-primary" %>
+  <% end %>
+  <br>
+
+  <%= form_with(model: @post, url: root_path, local: true, method: 'get') do |form| %>
+    <%= form.hidden_field :posts %>
+    <%= form.hidden_field :image_cache %>
+    <%= form.submit "back", name:'back' , class: "btn" %>
+  <% end %>
 
 </div>
