--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,6 +39,11 @@ body {
   width: 24px;
 }
 
+.imagy {
+  height: 100px;
+  width: 150px;
+}
+
 .notification-icon {
   background-position: -353px -298px;
   height: 24px;
