--- a/app/views/posts/_posts_list.html.erb
+++ b/app/views/posts/_posts_list.html.erb
@@ -35,13 +35,14 @@
     <div class="card mt-3 post">
         <div class="card-header d-flex align-items-center">
 
-      <% unless @post.user_id == current_user.id %>
-        <% if @favorite.present? %>
-          <button type="button" class="btn btn-danger"><%= link_to 'Unfavorite', favorite_path(id: @favorite.id), method: :delete %>
-        <% else %>
-          <button type="button" class="btn btn primary"><%= link_to 'Favorite', favorites_path(post_id: post.id), method: :post %>
+      <% unless post.user_id == current_user.id %>
+
+        <%# <%<% if @favorite.present? %>
+          <%# <!-- <button type="button" class="btn btn-danger"><%= link_to 'Unfavorite', favorite_path(id: @favorite.id), method: :delete %>
+        <%# <% else %>
+          <button type="button" class="btn btn primary"><%= link_to 'Make Favorite', favorites_path(post_id: post.id), method: :post %>
         <% end %>
-      <% end %>
+      <%# <% end %> 
       </div>
 
       <% if post.is_belongs_to? current_user %>
